fix overflow in mobile device

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,10 +23,12 @@
   }
 }
 
+html,
 body {
   background: var(--background);
   color: var(--foreground);
   cursor: none;
+  overflow-x: clip;
 }
 
 /* Custom Cursor Styles */
